--- a/app/views/welcome/unregistered.haml
+++ b/app/views/welcome/unregistered.haml
@@ -1,1 +1,7 @@
 %h1 Hola mundo
+
+%p
+	= link_to "Inicia sesion", new_user_session_path
+
+%p
+	= link_to "Crear cuenta", new_user_registration_path
