--- a/app/views/welcome/unregistered.haml
+++ b/app/views/welcome/unregistered.haml
@@ -2,8 +2,62 @@
 	.col-md-10.no-float.center-block
 		.col-md-6.no-padding.inline-block
 			=image_tag "tiendus.png", width:"100"
-			%h1.white-text.ultra-big
+			%h1.white-text.ultra-big.Kostic
 				%strong	
 					Ofrece tus productos digitales a tu audiencia
 		.col-md-5.inline-block
 			=image_tag "mono.png"
+
+.grey.white-text.big-padding.kostic.text-center
+
+	.col-md-10.no-float.center-block
+		.absolute{style:"position: absolute;bottom: -4.5em; width: 100%; left:0px;"}
+			.text-center.big
+				.col-md-3.inline-block
+					.white.grey-text.circle
+						%strong 1
+				.col-md-3.inline-block
+					.white.grey-text.circle
+						%strong 2
+				.col-md-3.inline-block
+					.white.grey-text.circle
+						%strong 3
+		
+		%h2.bigger
+			%strong
+				Tiendus en 3 pasos
+
+		%div.text-center.top-space
+			.col-md-3.inline-block.text-left
+				=image_tag "upload-icon.png", class:"col-md-10 inline-block" 
+				.top-space
+					%strong.medium
+						Sube tus fotos a Tiendus
+					%p.white-text.text-justify.small
+						Libro digital, cancion, comic, cursos o lo que se te ocurra! si lo puedes meter un zip, lo puedes vender.*
+			.col-md-3.inline-block.text-left
+				=image_tag "youtube-icon.png", class:"col-md-10 inline-block" 
+				.top-space
+					%strong.medium
+						Cuentales a tus Fans
+					%p.white-text.text-justify.small
+						Comparte el link personalizado de tu producto en tus redes sociales o sitio web
+			.col-md-3.inline-block.text-left
+				=image_tag "money-icon.png", class:"col-md-10 inline-block" 
+				.top-space
+					%strong.medium
+						Vende y gana dinero
+					%p.white-text.text-justify.small
+						Recibe tu dinero en tu cuenta de Paypal y tu cliente su producto en su email inmediatamente. Asi de facil
+
+.red.white-text.big-padding.kostic{style:"margin-top:5em;"}
+	.col-md-8.no-float.text-center.center-block
+		=image_tag "media-icons.png"
+		%p.medium.col-md-11.center-block.no-float.top-space
+			%strong
+				Vende tus libros electronicos, tutoriales, canciones, comics, platillas, fotografias de stock, archivos fuente, Cualquier producto digital!
+.top-space.big-padding
+	.col-md-12.col-xs-12.center-block.no-float
+		=form_tag("/", method: :post) do
+			=email_field_tag "email", nil, class: "col-xs-12 inline-block text-center landing-form", placeholder: "Escribe aqui tu mail"
+			
