--- a/app/views/welcome/unregistered.haml
+++ b/app/views/welcome/unregistered.haml
@@ -58,6 +58,6 @@
 				Vende tus libros electronicos, tutoriales, canciones, comics, platillas, fotografias de stock, archivos fuente, Cualquier producto digital!
 .top-space.big-padding
 	.col-md-12.col-xs-12.center-block.no-float
-		=form_tag("/", method: :post) do
+		=form_tag(create_email_path, method: :post) do
 			=email_field_tag "email", nil, class: "col-xs-12 inline-block text-center landing-form", placeholder: "Escribe aqui tu mail"
 			
