[add] style for email in landig page

--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -111,3 +111,11 @@ $light-blue: #3498DB;
 .big{
 	font-size: 3em;
 }
+
+.bottom-space{
+	margin-bottom: 1em;
+}
+
+.large-padding{
+	padding: 5px 10px;
+}
