--- a/app/views/products/_form.html.haml
+++ b/app/views/products/_form.html.haml
@@ -1,4 +1,6 @@
 = form_for @product,builder: BootstrapFormBuilder do |f|
   = f.text_field :name
-  = f.text_field :pricing
+  = f.number_field :pricing
+  = f.text_area :description
+  = f.submit "Enviar"
   
