--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -9,6 +9,13 @@ $other-grey: #E7ECEE;
 $blue: #058CC5;
 $red: #E43D7A;
 $light-blue: #3498DB;
+$teal: #009688;
+
+
+.bold{
+	font-weight:bold;
+}
+
 
 .green{
 	background-color: $green;
@@ -82,6 +89,7 @@ $light-blue: #3498DB;
 	float: none !important;
 	display: inline-block;
 	vertical-align: middle;
+	margin-right: -4px;
 }
 
 .ultra-big{
@@ -119,3 +127,7 @@ $light-blue: #3498DB;
 .large-padding{
 	padding: 5px 10px;
 }
+.normal{
+	font-size: 1.2em;	
+}
+
