--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -1,18 +1,23 @@
-%p#notice= notice
-
-%p
-  %b Name:
-  = @product.name
-%p
-  %b Pricing:
-  = @product.pricing
-%p
-  %b Description:
-  = @product.description
-%p
-  %b User:
-  = @product.user
-
-= link_to 'Edit', edit_product_path(@product)
-\|
-= link_to 'Back', products_path
+.col-lg-7.col-md-10.col-xs-12.col-sm-11.no-float.center-block
+	%article.card.big-padding
+		%header
+			%h1.grey-text.bold 
+				=@product.name
+		%section	
+			.col-xs-6.col-md-5.no-padding.inline-block
+				TO DO 
+			.col-md-1.inline-block.hidden-xs
+			.col-xs-5.col-md-6.inline-block.text-left
+				%h3.blue-text.bold.normal= @product.user.email
+				%h3.grey-text.bold.normal
+					Precio:
+					%span.grey-text= "$#{@product.pricing}"
+				%h3.grey-text.bold.normal
+					Archivos:
+					%span.grey-text= 20
+				%h3.grey-text.bold.normal
+					Tamaño:
+					%span.grey-text= "2 Gb"
+		%section
+			%h3.green-text.bold.normal Descripcion del producto
+			%p= @product.description
