--- a/app/views/products/_form.html.haml
+++ b/app/views/products/_form.html.haml
@@ -2,6 +2,7 @@
   = f.errors
   = f.text_field :name
   = f.number_field :pricing
+  = f.file_field :avatar
   = f.text_area :description
   = f.submit "Enviar"
   
