--- a/app/views/products/edit.html.haml
+++ b/app/views/products/edit.html.haml
@@ -1,7 +1,6 @@
-%h1 Editing product
+.col-md-10.col-xs-12.col-sm-11.no-float.center-block
+	.card.large-padding
+		%h1 Editar producto
+		= render 'form'
 
-= render 'form'
 
-= link_to 'Show', @product
-\|
-= link_to 'Back', products_path
