--- a/app/views/products/admin.haml
+++ b/app/views/products/admin.haml
@@ -17,5 +17,8 @@
 				editar producto
 			=link_to @product,method: :delete, class:"other-grey large-padding text-center col-md4 inline-block", data: { confirm: "Estas seguro de eliminar el producto?"} do
 				eliminar producto
+		%div
+			%h3.grey-text Archivos
+			= render "attachments/form", product_id: @product.id
 			
 				
