--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -18,6 +18,7 @@
 				%h3.grey-text.bold.normal
 					Tamaño:
 					%span.grey-text= "2 Gb"
+				=render "in_shopping_carts/form", product: @product
 		%section
 			%h3.green-text.bold.normal Descripcion del producto
 			%p= @product.description
