--- a/app/views/in_shopping_carts/_form.haml
+++ b/app/views/in_shopping_carts/_form.haml
@@ -1,2 +1,2 @@
-=link_to in_shopping_carts_path(product_id: product.id), method: :post do 
+=link_to add_to_cart_path(product_id: product.id), class:"btn btn-success" do 
 	Agregar al carrito	
